<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="6dp"
    android:background="@drawable/border"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_promo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/banner1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hair"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/upto" />

        <TextView
            android:id="@+id/angka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/abuGaris" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookingdis"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>