<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.piramidsoft.salon.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_register" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_med" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_view_biru_trans"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view_biru_telur"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="@dimen/size_small" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_view_biru_telur"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="@dimen/size_small" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_view_biru_telur"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="@dimen/size_small" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_view_biru_telur"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="@dimen/size_small" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_view_biru_telur"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="@dimen/size_small" />


    </LinearLayout>

    <Button
        android:id="@+id/btCreateAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_effect_putih"
        android:text="@string/create_account"
        android:textAllCaps="false" />


</LinearLayout>
