<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colom"
    android:orientation="vertical"
    tools:context="com.piramidsoft.salon.Fragment.FragmentHistory">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="3"
        android:padding="10dp"
        android:background="@color/colom"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:text="@string/waktu"
                android:textSize="@dimen/size_med"
                android:textStyle="bold" />

            <TextView
                android:text="@string/jumlah"
                android:textSize="@dimen/size_med"
                android:textStyle="bold" />

            <TextView
                android:text="@string/keterangan"
                android:textSize="@dimen/size_med"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
